# spotwise

./: .env.example  .gitignore  .mcp.json  .secrets.baseline  CLAUDE.md  Caddyfile  DESIGN.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/rules/: architecture.md  code-style.md  data-sources.md  git.md  testing.md
.claude/skills/deploy/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/recap/: SKILL.md
.claude/skills/security-review/: SKILL.md
.claude/skills/simplify/: SKILL.md
backend/: .dockerignore  Dockerfile  auth.py  config.py  main.py  models.py  pyproject.toml  rate_limit.py  start_dev.sh
backend/routers/: consumption_api.py  forecast_api.py  prices_api.py  savings_api.py  tariffs_api.py  user_api.py
backend/seed/: dso_tariffs.json  suppliers.json
backend/services/: cnb.py  db.py  entsoe.py  forecast.py  landed_cost.py  ote.py  queries.py  scheduler.py  weather.py
backend/tests/: conftest.py  test_auth.py  test_clients.py  test_consumption.py  test_db.py  test_forecast.py  test_landed_cost.py  test_routes.py
docs/: architecture.md  data-sources.md  deployment.md  workflows.md
docs/specs/: consumption-and-accounts.md  forecasting.md  landed-cost.md  savings-and-backtest.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: app.css  app.js  chart.min.js  consumption_import.js  dashboard.js  forecast.js  savings.js
scripts/: backup.sh  install-hooks.sh  restore.sh  route-auth-audit.py
scripts/hooks/: pre-commit  pre-push
