[project]
name = "spotwise"
version = "0.1.0"
description = "Czech electricity spot-price advisory platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "pydantic[email]>=2.7",
    "httpx>=0.27",
    "apscheduler>=3.11",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pytest-playwright>=0.5",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-q --tb=short"

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "**/__pycache__/*"]
